[tool.poetry]
name = "pyaccountant"
version = "0.1.0"
description = "Python tools for accountants."
authors = ["SamEdwardes <edwardes.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
rich = "^9.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
